Fix max with on mobile

--- a/static/less/style.less
+++ b/static/less/style.less
@@ -39,7 +39,7 @@ a {
 p {
   margin: 1.6rem 0 1.6rem 0;
   a {
-    font-weight: 400;
+    font-weight: 500;
     color: @darker-fg-color;
     text-decoration: underline;
     text-underline-position: under;
@@ -298,7 +298,11 @@ img {
   margin-right: auto;
   margin-top: 1.6rem;
   margin-bottom: 3.2rem;
-  width: 60em;
+  max-width: 60em;
+  text-align: left;
+  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+      max-width: 100%;
+  }
   article {
     header {
       margin-top: 3.2rem;
@@ -379,6 +383,7 @@ img {
 .centered {
   display: flex;
   height: 100%;
+  max-height: 60em;
   align-items: center;
   justify-content: center;
   .about {
